# servers

./: CMakeLists.txt  README.md  setup_db.ps1
include/: logging.h  osm_math.h
include/core/: data_structures.h  json_parser.h
include/curl/: osm_tile_fetcher.h
include/db/: pgsql_minimal.h
include/gui/: gui_app.h  gui_tabs.h
include/net/: zmq_receiver.h
include/network/: osm_tile_texture.h
include/ui/: ui_components.h  ui_widget.h
include/yadro/: android_payload.h  heatmap_generator.h  runtime_state.h
server_example/pythonserver/pythonProject/: client.c  client.py  server.py
server_example/serverzq/: android_messages.json  server.py
serverzq/: android_messages.json  server.py
src/: gui_tabs.cpp  logging.cpp  main.cpp
src/core/: heatmap_generator.cpp  json_parser.cpp
src/curl/: osm_tile_fetcher.cpp
src/db/: pgsql_minimal.cpp
src/gui/: gui_app.cpp
src/network/: osm_tile_texture.cpp
src/ui/: data_window.cpp  graph_window.cpp  map_window.cpp  menu_bar.cpp  ui_widget.cpp
src/zmq/: zmq_receiver.cpp
